--- a/lizard_ui/static/bootstrap/less/lizard-bootstrap.less
+++ b/lizard_ui/static/bootstrap/less/lizard-bootstrap.less
@@ -75,8 +75,7 @@
 // And to make sure there are no scrollbars when we slide a sidebar out, the
 // page needs to have overflow hidden.
 html,
-body,
-#page {
+body {
   // WARNING: this potentially makes _everything_ invisible in IE7
   overflow: hidden;
 }
@@ -159,7 +158,6 @@ body,
   right: 0;
   bottom: 0;
   left: 0;
-  overflow: hidden;
 }
 
 // Every bar is divided into two; the following parts are floated to the left.
